# rss-tools

./: .editorconfig  .gitignore  README.md  feeds.json  index.html  mergers.json  pyproject.toml  status.json
.github/workflows/: publish.yml
.state/sources/: absolute_tpb_search.json  aliens_search.json  assorted_search.json  beneath_the_trees_search.json  blade_runner_search.json  brzrkr_search.json  christopher_chaos_search.json  criminal_search.json  critical_role_search.json  cyberpunk_2077_search.json  department_truth_search.json  expanse_search.json  exquisite_corpses_search.json  hello_darkness_search.json  house_slaughter_search.json  invincible_universe_search.json  its_jeff_search.json  knights_vs_samurai_search.json  league_of_extraordinary_gentlemen_search.json  miles_morales_spider_man_search.json  nemesis_forever_search.json  nice_house_sea_search.json  predator_search.json  reckless_search.json  red_band_search.json  skinbreaker_search.json  something_killing_search.json  terminator_search.json  tpb_search.json  tpb_tag.json  ultimate_search.json  universal_monsters_search.json  void_rivals_search.json  w0rldtr33_search.json  white_knight_search.json  wynd_search.json
ongoing/: feed.xml
ongoing_reading/: feed.xml
open/: feed.xml
src/rss_tools/: __init__.py  cli.py  settings.py
src/rss_tools/core/: __init__.py  collector.py  config.py  feed.py  http.py  identity.py  merger.py  models.py  state.py  status.py
supers/: feed.xml
tests/: test_collector.py  test_identity.py  test_merger.py  test_status.py
tpb/: feed.xml
(+4 files in other folders)
